@@ -1,36 +1,41 @@
+import org.unix.foolib;
+
 import java.lang.foreign.FunctionDescriptor;
 import java.lang.foreign.Linker;
-import java.lang.foreign.MemorySession;
 import java.lang.invoke.*;
-import org.unix.foo_h;
-
-import static java.lang.foreign.ValueLayout.JAVA_INT;
-import static org.unix.foo_h.C_INT;
-import static org.unix.foo_h.printf;
 
 /**
  * Panama 4 newbies demo of calling getpid() .
  * @author cdea
  */
-public class PanamaPid {
-    public static void main(String[] args) {
-        // obtain a scope
-        try (var memorySession = MemorySession.openConfined()) {
+void main() {
+    // obtain a scope
+    try (var  arena = Arena.ofConfined()) {
 
-            var cLinker = Linker.nativeLinker();
-            // Using a MethodHandle
-            MethodHandle getpidMH = cLinker.downcallHandle(cLinker.defaultLookup().lookup("getpid").get(),
-                    FunctionDescriptor.of(JAVA_INT));
+        // 1. Obtain linker
+        var linker = Linker.nativeLinker();
 
-            int pid	= (int) getpidMH.invokeExact();
-            System.out.printf("MethodHandle calling getpid() (%d)\n", pid);
+        // 2. Obtaining symbol lookup from two places.
+        SymbolLookup stdlibLookup = SymbolLookup.loaderLookup()
+                .or(linker.defaultLookup());
 
-            // Using Jextract's getpid method.
-            int jextractPid = foo_h.getpid();
-            System.out.printf("Calling getpid()   (%d)\n", jextractPid);
+        // 3. Obtain symbol
+        MemorySegment getpidSymbol = stdlibLookup.findOrThrow("getpid");
 
-        } catch (Throwable throwable) {
-            throwable.printStackTrace();
-        }
+        // 4. Define the functions return type and argument signature. e.g. int getpid()
+        FunctionDescriptor funcDef = FunctionDescriptor.of(ValueLayout.JAVA_INT); /* return type (int)  */
+
+        // 5. Create a method handle to native function
+        MethodHandle getpidMethodHandle = linker.downcallHandle(getpidSymbol, funcDef);
+
+        int pid	= (int) getpidMethodHandle.invokeExact();
+        System.out.printf("MethodHandle calling getpid() (%d)\n", pid);
+
+        // Using Jextract's getpid method.
+        int jextractPid = foolib.getpid();
+        System.out.printf("Calling getpid()   (%d)\n", jextractPid);
+
+    } catch (Throwable throwable) {
+        throwable.printStackTrace();
     }
 }
