@@ -1,10 +1,12 @@
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.util.Date;
 
-import static java.lang.foreign.MemoryAddress.NULL;
-import static org.unix.foo_h.*;
+import static java.lang.foreign.ValueLayout.ADDRESS;
+import static org.unix.foolib.*;
+
+
 import org.unix.tm;
 
 /**
@@ -14,17 +16,16 @@ import org.unix.tm;
 public class PanamaTime {
     public static void main(String[] args) {
         // obtain a scope
-        try (var memorySession = MemorySession.openConfined()) {
-
+        try (var arena = Arena.ofConfined()) {
 
             // The variable now of type MemorySegment holds a C long type. The allocate method will create space.
             // time_t * (clong seconds since epoch) probable type is from a typedef long time_t; (64 bit)
 
             // Populate now variable with a Java epoch seconds. C long
-            var now = memorySession.allocate(C_LONG, System.currentTimeMillis() / 1000);
+            var now = arena.allocate(C_LONG, System.currentTimeMillis() / 1000);
 
             // Equivalent because time_t is a C_LONG
-            var now2 = memorySession.allocate(time_t);
+            var now2 = arena.allocate(time_t);
 
             // Get contents of now (java epoch seconds)
             long secondsSinceEpoch1 = now.get(C_LONG, 0);
@@ -43,7 +44,7 @@ public class PanamaTime {
             // tm is a C struct with an allocate method to create space
             // by instantiating a MemorySegment (pointer to tm struct)
             // struct tm *
-            MemorySegment pTmStruct = tm.allocate(memorySession);
+            MemorySegment pTmStruct = tm.allocate(arena);
 
             // Calling the C function localtime_r(now, time); now contains seconds, and time is a blank struct.
             // [ptr to struct]        [ptr to time_t           ]   [ptr to tm struct     ]
@@ -51,20 +52,30 @@ public class PanamaTime {
             localtime_r(now2, pTmStruct);
 
             // obtaining values based the offset into the tm struct.
-            var seconds = tm.tm_sec$get(pTmStruct);
-            var minutes = tm.tm_min$get(pTmStruct);
-            var hours = tm.tm_hour$get(pTmStruct);
+            var seconds = tm.tm_sec(pTmStruct);
+            var minutes = tm.tm_min(pTmStruct);
+            var hours = tm.tm_hour(pTmStruct);
 
-            var cString = memorySession.allocateUtf8String("2. C's printf & tm Struct of local time. %02d:%02d:%02d\n");
-            printf(cString, hours, minutes, seconds);
-            fflush(NULL);
+            var cString = arena.allocateFrom("2. C's printf & tm Struct of local time. %02d:%02d:%02d\n");
+            printf.makeInvoker(
+                    C_INT,
+                    C_INT,
+                    C_INT
+            ).apply(cString,
+                    hours,
+                    minutes,
+                    seconds);
+
+            fflush(NULL());
 
             // Obtaining values based on the tm struct from jextract
             System.out.printf("3. C's tm struct getters tm_hour, tm_min, tm_sec. %02d:%02d:%02d\n",
-                    tm.tm_hour$get(pTmStruct), tm.tm_min$get(pTmStruct), tm.tm_sec$get(pTmStruct));
+                    hours, minutes, seconds);
 
             // Call time.h asctime() function to display date time.
-            printf(memorySession.allocateUtf8String("4. C's asctime() function to display date time: %s\n"), asctime(pTmStruct));
+            MemorySegment asctimeCString = arena.allocateFrom("4. C's asctime() function to display date time: %s\n");
+            printf.makeInvoker(ADDRESS).apply(asctimeCString, asctime(pTmStruct));
+
         }
     }
 }
