@@ -3,12 +3,11 @@
 import sdl2.SDL_Event;
 import sdl2.SDL_TextInputEvent;
 
-import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.util.Objects;
 
-import static java.lang.foreign.MemoryAddress.NULL;
+import static org.unix.foolib.NULL;
 import static sdl2.LibSDL2.GL_COLOR_BUFFER_BIT;
 import static sdl2.LibSDL2.GL_MODELVIEW;
 import static sdl2.LibSDL2.GL_NO_ERROR;
@@ -83,26 +82,26 @@ import static sdl2.LibSDL2.glVertex2f;
 public class SDLFoo {
   private static final int SCREEN_WIDTH = 640;
   private static final int SCREEN_HEIGHT = 480;
-  private MemoryAddress gWindow;
-  private MemoryAddress gContext;
+  private long gWindow;
+  private long gContext;
 
 
-  public static void main(String[] args) {
-    try (var memorySession = MemorySession.openConfined()) {
+  void main() {
+    try (var arena = Arena.ofConfined()) {
       var sdlFoo = new SDLFoo();
 
       // Start up SDL and create window
-      if (!sdlFoo.init(memorySession)) {
+      if (!sdlFoo.init(arena)) {
         System.out.println("Failed to initialize!");
         System.exit(1);
       }
 
-      memorySession.addCloseAction(sdlFoo::close);
+      //memorySession.addCloseAction(sdlFoo::close);
 
       // Event handling
       // Allocate SDL_Event sdlEvent; which is a union type
-      var sdlEvent = MemorySegment.allocateNative(SDL_Event.sizeof(), memorySession);
-      
+      var sdlEvent = arena.allocate(SDL_Event.sizeof());
+
       // Enable text input
       SDL_StartTextInput();
 
@@ -113,22 +112,22 @@ public class SDLFoo {
         // Handle events on queue
         while (SDL_PollEvent(sdlEvent) != 0) {
           // User clicked the quit button
-          if (SDL_Event.type$get(sdlEvent) == SDL_QUIT()) {
+          if (SDL_Event.type(sdlEvent) == SDL_QUIT()) {
             quit = true;
           }
 
           // Handle keypress with current mouse position
-          else if (SDL_Event.type$get(sdlEvent) == SDL_TEXTINPUT()) {
-            var textSeg = SDL_TextInputEvent.text$slice(sdlEvent);
-            char c = textSeg.getUtf8String(0).charAt(0);
+          else if (SDL_Event.type(sdlEvent) == SDL_TEXTINPUT()) {
+            var textSeg = SDL_TextInputEvent.asSlice(sdlEvent, 0);
+            char c = textSeg.getString(0).charAt(0);
             if (c == 'q') {
               quit = true;
             }
           }
         }
 
-        sdlFoo.render(memorySession);
-        sdlFoo.update(memorySession);
+        sdlFoo.render(arena);
+        sdlFoo.update(arena);
       }
 
       //Disable text input
@@ -136,14 +135,14 @@ public class SDLFoo {
     }
   }
 
-  private void update(MemorySession memorySession) {
+  private void update(Arena arena) {
     // Update a window with OpenGL rendering
-    SDL_GL_SwapWindow(gWindow);
+    SDL_GL_SwapWindow(MemorySegment.ofAddress(gWindow));
   }
 
-  private boolean init(MemorySession memorySession) {
+  private boolean init(Arena arena) {
     if (SDL_Init(SDL_INIT_VIDEO()) < 0) {
-      String errMsg = SDL_GetError().getUtf8String(0);
+      String errMsg = SDL_GetError().getString(0);
       System.out.printf("SDL could not initialize! SDL Error: %s\n", errMsg);
       return false;
     } else {
@@ -151,26 +150,27 @@ public class SDLFoo {
       SDL_GL_SetAttribute(SDL_GL_CONTEXT_MINOR_VERSION(), 1);
 
 
-      gWindow = SDL_CreateWindow(memorySession.allocateUtf8String("SDL for Panama"),
+       MemorySegment gWindowMemSeg = SDL_CreateWindow(arena.allocateFrom("SDL for Panama"),
                                  SDL_WINDOWPOS_UNDEFINED(),
                                  SDL_WINDOWPOS_UNDEFINED(),
                                  SCREEN_WIDTH,
                                  SCREEN_HEIGHT,
                                  SDL_WINDOW_OPENGL() | SDL_WINDOW_SHOWN());
-
-      if (Objects.equals(NULL, gWindow)) {
-        System.out.printf("Window could not be created! SDL Error: %s\n", SDL_GetError().getUtf8String(0));
+        gWindow = gWindowMemSeg.address();
+      if (Objects.equals(NULL(), MemorySegment.ofAddress(gWindow))) {
+        System.out.printf("Window could not be created! SDL Error: %s\n", SDL_GetError().getString(0));
         return false;
       } else {
         // Initialize opengl
-        gContext = SDL_GL_CreateContext(gWindow);
-        if (Objects.equals(NULL, gContext)) {
-          System.out.printf("OpenGL context could not be created! SDL Error: %s\n", SDL_GetError().getUtf8String(0));
+        MemorySegment gContextMemSeg = SDL_GL_CreateContext(gWindowMemSeg);
+        gContext = gContextMemSeg.address();
+        if (Objects.equals(NULL(), MemorySegment.ofAddress(gContext))) {
+          System.out.printf("OpenGL context could not be created! SDL Error: %s\n", SDL_GetError().getString(0));
           return false;
         } else {
           //Use Vsync
           if (SDL_GL_SetSwapInterval(1) < 0) {
-            System.out.printf("Warning: Unable to set VSync! SDL Error: %s\n", SDL_GetError().getUtf8String(0));
+            System.out.printf("Warning: Unable to set VSync! SDL Error: %s\n", SDL_GetError().getString(0));
           }
 
 
@@ -223,11 +223,11 @@ public class SDLFoo {
   }
 
   private void close() {
-    SDL_DestroyWindow(gWindow);
+    SDL_DestroyWindow(MemorySegment.ofAddress(gWindow));
     SDL_Quit();
   }
 
-  private void render(MemorySession memorySession) {
+  private void render(Arena arena) {
     //Clear color buffer
     glClear(GL_COLOR_BUFFER_BIT());
 
